--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,9 @@
         }
     </style>
     <body>
-        <h1>Build-a-blog</h1>
+        <h1>
+            <a href="/blog">Build-a-blog</a>
+        </h1>
 
         {% block content %}
         {% endblock %}
