finished assignment without bonus

--- a/templates/blog-submissions.html
+++ b/templates/blog-submissions.html
@@ -3,16 +3,20 @@
 {% block content %}
 
 {% for entry in entries %}
+    <div class="error">{{error}}</div>
+
     <div class="entry">
         <div class="entry-title">
-        <a href="/blog/<id:\d+>">{{entry.title}}</a>
+        <a href="/blog/{{entry.key().id()}}">{{entry.title}}</a>
         </div>
         <pre class="entry-body">{{entry.entry}}</pre>
     </div>
 {% endfor %}
 
+    <div><a href="/blog?=page">previous page</a></div>
+    <div><a href="/blog?=page">next page</a></div>
     <h3>
-        <a href="/newpost">Create a new post</a>
+        <a href="/blog/newpost">Create a new post</a>
     </h3>
 
 {% endblock %}
